feat: remove no-used code and add gzip to make file less then add meta data to make seo effensive and api cache

--- a/index.html
+++ b/index.html
@@ -4,13 +4,57 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
     <title>農民曆智慧投資 - 0050 ETF 投資建議系統</title>
+    <meta name="title" content="農民曆智慧投資 - 0050 ETF 投資建議系統" />
     <meta
       name="description"
-      content="結合傳統農民曆智慧與現代金融科技，為您的 0050 ETF 投資提供個人化建議"
+      content="結合傳統農民曆智慧與現代金融科技，為您的 0050 ETF 投資提供個人化建議。透過天干地支、宜忌分析，找出最佳投資時機。"
     />
+    <meta
+      name="keywords"
+      content="農民曆,投資建議,0050 ETF,台股,天干地支,宜忌,投資分析,金融科技,股市預測"
+    />
+    <meta name="author" content="Lucky50 Investment" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://lucky50.vercel.app/" />
+    <meta property="og:title" content="農民曆智慧投資 - 0050 ETF 投資建議系統" />
+    <meta
+      property="og:description"
+      content="結合傳統農民曆智慧與現代金融科技，為您的 0050 ETF 投資提供個人化建議。透過天干地支、宜忌分析，找出最佳投資時機。"
+    />
+    <meta property="og:image" content="https://lucky50.vercel.app/og-image.jpg" />
+    <meta property="og:site_name" content="Lucky50 Investment" />
+    <meta property="og:locale" content="zh_TW" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://lucky50.vercel.app/" />
+    <meta property="twitter:title" content="農民曆智慧投資 - 0050 ETF 投資建議系統" />
+    <meta
+      property="twitter:description"
+      content="結合傳統農民曆智慧與現代金融科技，為您的 0050 ETF 投資提供個人化建議。"
+    />
+    <meta property="twitter:image" content="https://lucky50.vercel.app/og-image.jpg" />
+
+    <!-- Additional SEO Meta -->
+    <meta name="theme-color" content="#3B82F6" />
+    <meta name="msapplication-TileColor" content="#3B82F6" />
+    <link rel="canonical" href="https://lucky50.vercel.app/" />
+
+    <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://api.finmindtrade.com" />
+
+    <!-- Preload critical resources -->
+    <link rel="modulepreload" href="/src/main.ts" />
+    <link rel="prefetch" href="/src/views/Dashboard.vue" />
+    <link rel="prefetch" href="/src/views/Analytics.vue" />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap"
       rel="stylesheet"
