--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
     />
     <meta property="twitter:image" content="https://lucky50.vercel.app/og-image.jpg" />
 
+    <!-- PWA Support -->
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Lucky50" />
+
     <!-- Additional SEO Meta -->
     <meta name="theme-color" content="#3B82F6" />
     <meta name="msapplication-TileColor" content="#3B82F6" />
@@ -49,16 +55,40 @@
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Resource hints for better performance -->
+    <link rel="dns-prefetch" href="https://api.finmindtrade.com" />
+    <link rel="dns-prefetch" href="https://vercel.app" />
+
+    <!-- Critical CSS inlining hint -->
+    <link rel="preload" href="/src/assets/style.css" as="style" />
+
+    <!-- Font loading optimization -->
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
     <link rel="preconnect" href="https://api.finmindtrade.com" />
 
     <!-- Preload critical resources -->
     <link rel="modulepreload" href="/src/main.ts" />
     <link rel="prefetch" href="/src/views/Dashboard.vue" />
     <link rel="prefetch" href="/src/views/Analytics.vue" />
+    <!-- Font loading optimization -->
     <link
+      rel="preload"
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
     />
+    <noscript>
+      <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap"
+        rel="stylesheet"
+      />
+    </noscript>
   </head>
   <body>
     <div id="app"></div>
